# emoji_picker

./: .gitignore  .gitmodules  BUILD.bazel  WORKSPACE.bazel  index.html  package-lock.json  package.json  tsconfig.json
src/: BUILD.bazel  index.ts
src/picker/: BUILD.bazel  index.ts
